<resources>
    <string name="placeholder">Placeholder</string>
    <string name="go">GO</string>
    <string name="welcome_to_yoga">Welcome to</string>
    <string name="app_name">[jo:ga]</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login >></string>
    <string name="lets_go">"Let's Go >>"</string>
    <string name="oops">Ooops…</string>
    <string name="incorrect_credentials">"You've typed incorrect credentials. \nPlease, try again!"</string>
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="train_now">Train now</string>
    <string name="by_you">by you</string>
    <string name="journeys">Journeys</string>
    <string name="trainers">Trainers</string>
    <string name="see_all">See all</string>
    <string name="logout">Logout</string>
    <string name="copyright">copyright © by joga.dk</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="with">with %1$s</string>
    <string name="min">%1$d min</string>
    <string name="category_with_duration">%1$s - %2$d min</string>
    <string name="today_pick">Today\'s pick</string>
    <string name="new_classes">New classes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="log_me_out">Yes, log me out!</string>
    <string name="account_id">Account ID</string>
    <string name="app_version">App version</string>
    <string name="your_instructor">Your instructor</string>
    <string name="title_duration">%1$s - %2$d min</string>
    <string name="liked_by_you">Liked by you</string>
    <string name="locked">Locked</string>
    <string name="all_classes">All classes</string>
    <string name="play">Play</string>
    <string name="focus">focus: </string>
    <string name="watched">Watched!</string>
    <string name="no_subscription_active" translatable="false">You don\'t have active subscription, please buy one in web panel</string>
    <string name="refresh" translatable="false">Refresh now</string>
    <string name="connection_error" translatable="false">Connection error. Try again later.</string>
    <string name="sub_login_error" translatable="false">Connection error. Logout and try again.</string>

    <string name="saved_token_key" translatable="false">saved_token_key</string>
    <string name="saved_refresh_token_key" translatable="false">saved_refresh_token_key</string>
    <string name="saved_user_id" translatable="false">saved_user_id</string>
    <string name="saved_username" translatable="false">saved_username</string>
    <string name="saved_password" translatable="false">saved_password</string>
    <string name="was_seen" translatable="false">was_seen</string>
    <string name="X" translatable="false">X</string>
    <string name="clock_icon" translatable="false">Clock icon</string>
    <string name="star_icon" translatable="false">Star icon</string>
    <string name="trainer_icon" translatable="false">Trainer icon</string>
    <string name="heart_icon" translatable="false">Heart icon</string>
    <string name="share_icon" translatable="false">Share icon</string>
    <string name="play_icon" translatable="false">Play icon</string>
    <string name="watched_icon" translatable="false">Watched icon</string>
    <string name="journeys_icon" translatable="false">Journeys icon</string>
    <string name="tv_share_icon" translatable="false">TV share icon</string>
    <string name="new_indicator_icon" translatable="false">New class icon</string>
    <string name="warning_icon" translatable="false">Warning icon</string>
    <string name="instructor_avatar" translatable="false">Instructor avatar</string>
    <string name="preferences_name" translatable="false">preferences</string>
    <string name="exo_rewind" translatable="false">Rewind</string>
    <string name="exo_play" translatable="false">Play</string>
    <string name="exo_pause" translatable="false">Pause</string>
    <string name="exo_fast_forward" translatable="false">Fast forward</string>
    <string name="exo_fullscreen" translatable="false">Fullscreen</string>
    <string name="app_id" translatable="false">CC1AD845</string>
</resources>