<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_app_padding">

            <TextView
                android:id="@+id/train_now_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_now"
                android:textSize="@dimen/screen_title_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/top_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/train_now_text_view" />

            <androidx.cardview.widget.CardView
                android:id="@+id/today_pick_thumbnail_card_view"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_divider">

                <ImageView
                    android:id="@+id/todays_pick_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:contentDescription="@string/placeholder"
                    android:src="@drawable/placeholder_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/today_pick_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/today_pick"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/today_pick_thumbnail_card_view" />

            <TextView
                android:id="@+id/today_pick_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/with_text_view"
                app:layout_constraintStart_toEndOf="@+id/today_pick_text_view" />

            <TextView
                android:id="@+id/with_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/today_pick_text_view" />

            <TextView
                android:id="@+id/today_pick_trainer_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/with_text_view"
                app:layout_constraintStart_toEndOf="@+id/with_text_view" />

            <TextView
                android:id="@+id/today_pick_min_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/with_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/today_pick_text_view" />

            <View
                android:id="@+id/second_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/with_text_view" />

            <TextView
                android:id="@+id/liked_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/by_you"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/like_icon"
                app:layout_constraintBottom_toBottomOf="@+id/see_liked_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/see_liked_button" />

            <Button
                android:id="@+id/see_liked_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/liked_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/see_liked_button" />

            <View
                android:id="@+id/third_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/liked_recycler_view" />

            <TextView
                android:id="@+id/journeys_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/journeys"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/journeys_icon"
                app:layout_constraintBottom_toBottomOf="@+id/see_journeys_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/see_journeys_button" />

            <Button
                android:id="@+id/see_journeys_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/third_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/journey_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/see_journeys_button" />

            <View
                android:id="@+id/fourth_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journey_recycler_view" />

            <TextView
                android:id="@+id/trainers_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/trainers"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/trainer_icon"
                app:layout_constraintBottom_toBottomOf="@+id/see_trainers_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/see_trainers_button" />

            <Button
                android:id="@+id/see_trainers_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourth_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/instructor_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/see_trainers_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="8dp"
                android:text="@string/logout"
                android:textSize="18sp"
                app:icon="@drawable/logout_icon"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructor_recycler_view"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/copyright_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/copyright"
                android:textColor="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logout_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@color/background"
        app:itemIconTint="@color/white"
        app:itemRippleColor="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>