<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.logout.LogoutFragment">

    <TextView
        android:id="@+id/are_you_sure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/are_you_sure"
        android:textSize="@dimen/screen_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:cardBackgroundColor="@color/background_secondary"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintTop_toBottomOf="@+id/are_you_sure_text_view"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_app_padding">

            <TextView
                android:id="@+id/account_id_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_id"
                android:textSize="@dimen/default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text"
                app:layout_constraintBottom_toBottomOf="@+id/account_id_text_view"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_small"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/account_id_text_view"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/app_version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/app_version"
                android:textSize="@dimen/default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <TextView
                android:id="@+id/current_app_version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text"
                app:layout_constraintBottom_toBottomOf="@+id/app_version_text_view"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/log_me_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_me_out"
        android:textAllCaps="false"
        android:textSize="@dimen/default_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/joga_green"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>